minitrace-macro/tests/ui/err/name-is-not-an-assignment-expression.rs
use minitrace::trace;

#[trace(b)]
fn f() {}

fn main() {}
